--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -22,6 +22,11 @@ The guideline includes three parts:
 * An introduction to the mainstream directions of computational mathematics
 * An introduction to professional courses in USTC
 * Some tips on studying and doing research
+* Some tips on future development
+
+Notice
+------
+Any guidance from previous students is more or less limited. The "experiences" are only limited to the specific person and the specific time. Please take the guideline as a reference rather than something you must follow.
 
 Link
 ----------
