--- a/_posts/2013-08-14-blog-post-2.md
+++ b/_posts/2013-08-14-blog-post-2.md
@@ -10,7 +10,11 @@ tags:
 
 Life in USTC
 ============
-Actually, the moment you enter the gate of USTC, you kind of lose the colorful college life that might ever exist in your mind. If you are a boring person and your satisfaction completely comes from academic work, anime, and PC games, you are a perfect fit for USTC. Hefei is boring. The campus is boring. Most of your schoolmates are boring...... If you have a strong need to socialize, you will endure four years of relative hardship at this school.
+<span style="font-family: Arial, sans-serif; font-weight: bold; font-size: 16px; color: #FF0000;">If you need USTC to recruit you, you ain't the one.</span>
+
+Boring
+------
+Actually, the moment you enter the gate of USTC, you kind of lose the colorful college life that might ever exist in your mind. If you are a boring person and your satisfaction completely comes from academic work, anime, and PC games, you are a perfect fit for USTC in terms of adapting the daily life here. Hefei is boring, compared to Beijing, Shanghai, and even Nanjing. Most of your schoolmates are boring, engaging themselve into their academic world. If you have a strong need to socialize, you will endure four years of hardship at this school. However, since I'm a boring person, I feel like everything is just appropriate.
 
 Interests
 ----------
@@ -23,6 +27,6 @@ Actually, you can have fun as long as you have time and willingness. There are q
 I have a passion for nightfall. I thoroughly enjoy the mixture of pink, red, orange, and yellow spraying on the earth. When everything is covered by the beauty of these fleeting moments, I feel like touching the most magnificent part of life, which reversely touches the deepest romance in my heart.
 <!--这里要放照片-->
 
-Why not arm yourself with the coolest 'mathematical and physical knowledge'? Please hug the world. Life is far more than academic books, homework, and experiments. Fun can be found everywhere, as long as you feel it with your full heart.
+Why do you have to arm yourself with the boring 'mathematical and physical knowledge'? An A+ is no difference than A after graduation. Life is far more than academic books, homework, and experiments. Fun can be found everywhere, as long as you feel it without an anxious and impatient heart.
 
 Relax. And make peace with yourself.
